--- a/wishlist_management/public/stylesheets/style.css
+++ b/wishlist_management/public/stylesheets/style.css
@@ -11,3 +11,16 @@ a {
   font-size: 30px;
   font-weight: bold;
 }
+
+.both-tables{
+  width : 100%;
+}
+
+.table-elements{
+  border : 1px solid green;
+  width : 50%;
+}
+
+.table-row{
+
+}
