finished the styling and tested
I finished the styling and tested everything, the last thing is that I want to implement something for errors

--- a/wishlist_management/public/stylesheets/style.css
+++ b/wishlist_management/public/stylesheets/style.css
@@ -18,8 +18,12 @@ a {
 }
 
 .table-elements{
-  border : 3px solid black;
   width : 50%;
+  height : 30px;
+}
+
+.table-row{
+  text-align: center;
 }
 
 .table-row:nth-child(2){
@@ -35,13 +39,14 @@ a {
 }
 
 .wish-table-elements{
-  border : 3px solid black;
-  width : 33%;
+  width : 33.3%;
+  text-align: center;
 }
 
 .wish-img{
   width : 50%;
   height : 60%;
+  padding : 10px;
 }
 
 /*styling management.html*/
